GNOME Bugzilla – Bug 634064
Unable to import a private SSH key
Last modified: 2011-04-12 19:25:40 UTC
I exported my SSH key I created with seahorse, but after reinstalling the OS I can't import it back. The program displays success in the status bar, though. seahorse-2.32.0-1.fc14.x86_64
That's strange. What's the content-type of the file you're importing? That's thet 'Type' in the file properties (viewable in nautilus).
application/x-pem-key
Thanks for reporting the problem. I've committed a fix, which should be included in 3.0.1. commit abef8bd54e56b3c7dbcaa9a839a49a3eb8f2374d Author: Stef Walter <stefw@collabora.co.uk> Date: Tue Apr 12 20:18:53 2011 +0200 Fix problem importing SSH keys. * Files weren't being read completely. https://bugzilla.gnome.org/show_bug.cgi?id=634064
Thanks a lot.