Fix problem importing SSH keys.

* Files weren't being read completely.

https://bugzilla.gnome.org/show_bug.cgi?id=634064